@@ -24,10 +24,40 @@
    Boston, MA 02110-1301, USA.
 */
 
+/* READ FIRST
+ * Using RFC 3986 instead of 2396 because it is the latest URL/URI
+ * specification when this file was written in January 2012.  The main
+ * difference is that RFC 3986 adds IPv6 address support, allowing
+ * this implementation to be a little more future proof than if we were
+ * using only RFC 2396.
+ */
+
 #include "CoreFoundation/CFRuntime.h"
 #include "CoreFoundation/CFString.h"
 #include "CoreFoundation/CFURL.h"
 #include "GSPrivate.h"
+
+#if defined(_WIN32)
+#define CFURL_DEFAULT_PATH_STYLE kCFURLWindowsPathStyle
+#else
+#define CFURL_DEFAULT_PATH_STYLE kCFURLPOSIXPathStyle
+#endif
+
+#define URL_IS_SCHEME(c) (CHAR_IS_ALPHA(c) || CHAR_IS_DIGIT(c) \
+  c == CHAR_PLUS || c == CHAR_MINUS || c == CHAR_PERIOD)
+
+#define URL_IS_RESERVED(c) (URL_IS_GEN_DELIMS(c) || URL_IS_SUB_DELIMS(c))
+#define URL_IS_UNRESERVED(c) (CHAR_IS_ALPHA(c) || CHAR_IS_DIGIT(c) \
+  || c == CHAR_MINUS || c == CHAR_PERIOD || c == CHAR_LOW_LINE \
+  || c == CHAR_TILDE)
+
+#define URL_IS_GEN_DELIMS(c) (c == CHAR_COLON || c == CHAR_SLASH \
+  || c == CHAR_QUESTION || c == CHAR_NUMBER || c == CHAR_L_SQUARE_BRACKET \
+  || c == CHAR_R_SQUARE_BRACKET || c == CHAR_AT)
+#define URL_IS_SUB_DELIMS(c) (c == CHAR_EXCLAMATION || c == CHAR_DOLLAR \
+  || c == CHAR_AMPERSAND || c == CHAR_APOSTROPHE || c == CHAR_L_PARANTHESIS \
+  || c == CHAR_ASTERISK || c == CHAR_PLUS || c == CHAR_COMMA \
+  || c == CHAR_SEMICOLON || c == CHAR_EQUAL)
 
 static CFTypeID _kCFURLTypeID = 0;
 
@@ -37,7 +67,17 @@ struct __CFURL
   CFStringRef   _urlString;
   CFURLRef      _baseURL;
   CFStringEncoding _encoding; // The encoding of the escape characters
+  CFOptionFlags _info; // Used to find out which ranges have data.
+  CFRange       _ranges[12]; // CFURLComponentType ranges
 };
+
+#define kCFURLCanBeDecomposed 0
+
+CF_INLINE Boolean
+CFURLHasInfo (CFURLRef url, CFIndex option)
+{
+  return (url->_info & (1<<option)) ? true : false;
+}
 
 static void
 CFURLFinalize (CFTypeRef cf)
@@ -75,10 +115,70 @@ CFURLGetTypeID (void)
   return _kCFURLTypeID;
 }
 
+#define CFURL_SIZE sizeof(struct __CFURL) - sizeof(CFRuntimeBase)
+
+static Boolean
+CFURLStringParse (struct __CFURL *url, CFStringRef urlString)
+{
+  return true; // FIXME
+}
+
+static CFURLRef
+CFURLCreate_internal (CFAllocatorRef alloc, CFStringRef string,
+  CFURLRef baseURL, CFStringEncoding encoding)
+{
+  struct __CFURL *new;
+  
+  new = (struct __CFURL*)_CFRuntimeCreateInstance (alloc, _kCFURLTypeID,
+    CFURL_SIZE, 0);
+  if (new)
+    {
+      if (!CFURLStringParse (new, string))
+        {
+          CFRelease (new);
+          return NULL;
+        }
+      
+      new->_urlString = CFStringCreateCopy (alloc, string);
+      new->_baseURL = baseURL ? CFURLCopyAbsoluteURL (baseURL) : NULL;
+      new->_encoding = encoding;
+    }
+  
+  return new;
+}
+
+CFURLRef
+CFURLCreateWithString (CFAllocatorRef alloc, CFStringRef string,
+  CFURLRef baseURL)
+{
+  return CFURLCreate_internal (alloc, string, baseURL, kCFStringEncodingUTF8);
+}
+
 CFURLRef
 CFURLCopyAbsoluteURL (CFURLRef relativeURL)
 {
-  return NULL;
+  CFIndex len;
+  CFStringRef absStr;
+  CFMutableStringRef str;
+  CFURLRef abs;
+  CFURLRef ret;
+  
+  if (relativeURL->_baseURL == NULL)
+    return CFRetain (relativeURL);
+  
+  abs = CFURLCopyAbsoluteURL (relativeURL->_baseURL);
+  absStr = CFURLGetString(abs);
+  len = CFStringGetLength(absStr) + CFStringGetLength(relativeURL->_urlString);
+  str = CFStringCreateMutableCopy (NULL, len, absStr);
+  CFStringAppend (str, relativeURL->_urlString);
+  
+  ret = CFURLCreate_internal (CFGetAllocator(relativeURL), str, NULL,
+    relativeURL->_encoding);
+  
+  CFRelease (str);
+  CFRelease (abs);
+  
+  return ret;
 }
 
 CFURLRef
@@ -151,7 +251,7 @@ CFURLRef
 CFURLCreateFileReferenceURL (CFAllocatorRef alloc, CFURLRef url,
   CFErrorRef *error)
 {
-  return NULL;
+  return NULL; // FIXME ???
 }
 
 CFURLRef
@@ -166,22 +266,77 @@ CFURLRef
 CFURLCreateFromFileSystemRepresentationRelativeToBase (CFAllocatorRef alloc,
   const UInt8 *buffer, CFIndex bufLen, Boolean isDirectory, CFURLRef baseURL)
 {
-  return NULL;
-}
-
-CFURLRef
-CFURLCreateWithBytes (CFAllocatorRef alloc, const UInt8 *bytes, CFIndex length,
-  CFStringEncoding encoding, CFURLRef baseURL)
-{
-  return NULL;
+  CFURLRef ret;
+  CFStringRef path;
+  
+  path = CFStringCreateWithBytesNoCopy (alloc, buffer, bufLen,
+    GSStringGetFileSystemEncoding(), false, kCFAllocatorNull);
+  ret = CFURLCreateWithFileSystemPathRelativeToBase (alloc, path,
+    CFURL_DEFAULT_PATH_STYLE, isDirectory, baseURL);
+  
+  CFRelease (path);
+  
+  return ret;
 }
 
 CFURLRef
 CFURLCreateWithFileSystemPath (CFAllocatorRef alloc,
  CFStringRef fileSystemPath, CFURLPathStyle style, Boolean isDirectory)
 {
-  return CFURLCreateWithFileSystemPathRelativeToBase (alloc,
-    fileSystemPath, style, isDirectory, NULL);
+  CFURLRef ret;
+  
+  ret = CFURLCreateWithFileSystemPathRelativeToBase (alloc, fileSystemPath,
+    style, isDirectory, NULL);
+  
+  return ret;
+}
+
+#if defined(_WIN32)
+#include <windows.h>
+#else
+#include <unistd.h>
+#include <string.h>
+#endif
+
+CF_INLINE CFURLRef
+CFURLCreateWithCurrentDirectory (CFAllocatorRef alloc)
+{
+#if defined(_WIN32)
+  wchar_t buffer[MAX_PATH];
+  DWORD length;
+  
+  length = GetCurrentDirectoryW (MAX_PATH, buffer);
+  if (length == 0)
+    return NULL;
+  
+  return CFURLCreateFromFileSystemRepresentation (alloc,
+    (const UInt8 *)buffer, length, true);
+#else
+  char buffer[1024];
+  
+  if (getcwd(buffer, 1024) == NULL)
+    return NULL;
+  
+  return CFURLCreateFromFileSystemRepresentation (alloc,
+    (const UInt8 *)buffer, strlen(buffer), true);
+#endif
+}
+
+CF_INLINE Boolean
+CFURLStringIsAbsoluteFSPath (CFStringRef filePath, CFURLPathStyle style)
+{
+  switch (style)
+    {
+    case kCFURLPOSIXPathStyle:
+      return (CFStringGetCharacterAtIndex(filePath, 0) == CHAR_SLASH);
+    case kCFURLHFSPathStyle:
+      return (CFStringGetCharacterAtIndex(filePath, 1) == CHAR_COLON
+        && CFStringGetCharacterAtIndex(filePath, 1) == CHAR_BACKSLASH);
+    case kCFURLWindowsPathStyle:
+      // FIXME: I don't know how to handle this!
+      return false;
+    }
+  return false;
 }
 
 CFURLRef
@@ -189,147 +344,248 @@ CFURLCreateWithFileSystemPathRelativeToBase (CFAllocatorRef alloc,
   CFStringRef filePath, CFURLPathStyle style, Boolean isDirectory,
   CFURLRef baseURL)
 {
-  return NULL;
+  CFURLRef ret;
+  Boolean abs;
+  UniChar delim;
+  CFIndex filePathLength;
+  
+  switch (style)
+    {
+    case kCFURLPOSIXPathStyle:
+      abs = (CFStringGetCharacterAtIndex(filePath, 0) == CHAR_SLASH);
+      delim = CHAR_SLASH;
+      break;
+    case kCFURLHFSPathStyle:
+      abs = (CFStringGetCharacterAtIndex(filePath, 1) == CHAR_COLON
+        && CFStringGetCharacterAtIndex(filePath, 2) == CHAR_BACKSLASH);
+      delim = CHAR_BACKSLASH;
+      break;
+    case kCFURLWindowsPathStyle:
+      // FIXME: I don't know how to handle this!
+      abs = (CFStringGetCharacterAtIndex(filePath, 0) == CHAR_COLON);
+      delim = CHAR_COLON;
+    }
+  
+  if (abs)
+    baseURL = NULL;
+  else if (baseURL == NULL)
+    baseURL = CFURLCreateWithCurrentDirectory (alloc);
+  else
+    CFRetain (baseURL);
+  
+  filePathLength = CFStringGetLength (filePath);
+  CFRetain (filePath);
+  if (isDirectory)
+    {
+      if (CFStringGetCharacterAtIndex(filePath, filePathLength - 1) != delim)
+        {
+          CFRelease (filePath);
+          filePath = (CFStringRef)
+            CFStringCreateMutableCopy (alloc, filePathLength + 1, filePath);
+          CFStringAppendCharacters ((CFMutableStringRef)filePath, &delim, 1);
+        }
+    }
+  else
+    {
+      if (CFStringGetCharacterAtIndex(filePath, filePathLength - 1) == delim)
+        {
+          CFRelease (filePath);
+          filePath =
+            CFStringCreateMutableCopy (alloc, filePathLength, filePath);
+          CFStringDelete ((CFMutableStringRef)filePath,
+            CFRangeMake(filePathLength - 1, 1));
+        }
+    }
+  
+  /* We don't need to worry about percent escapes since there won't be
+   * any for the file system path.  We pass 0 for the encoding.
+   */
+  ret = CFURLCreate_internal (alloc, filePath, baseURL, 0);
+  
+  CFRelease (filePath);
+  if (baseURL)
+    CFRelease (baseURL);
+  
+  return ret;
 }
 
 CFURLRef
-CFURLCreateWithString (CFAllocatorRef alloc, CFStringRef string,
-  CFURLRef baseURL)
+CFURLCreateWithBytes (CFAllocatorRef alloc, const UInt8 *bytes, CFIndex length,
+  CFStringEncoding encoding, CFURLRef baseURL)
 {
-  struct __CFURL *new;
+  CFStringRef str;
+  CFURLRef ret;
   
-  new = (struct __CFURL*)_CFRuntimeCreateInstance (alloc, _kCFURLTypeID,
-    sizeof(struct __CFURL) - sizeof(CFRuntimeBase), 0);
-  if (new)
-    {
-      new->_urlString = CFStringCreateCopy (alloc, string);
-      new->_baseURL = baseURL ? CFURLCopyAbsoluteURL (baseURL) : NULL;
-    }
+  str = CFStringCreateWithBytesNoCopy (NULL, bytes, length, encoding, false,
+    kCFAllocatorNull);
+  ret = CFURLCreate_internal (alloc, str, baseURL, encoding);
   
-  return new;
+  CFRelease (str);
+  
+  return ret;
 }
 
 Boolean
 CFURLCanBeDecomposed (CFURLRef url)
 {
+  if (CFURLHasInfo(url, kCFURLCanBeDecomposed))
+    return false;
   return false;
 }
 
 CFStringRef
-CFURLCopyFileSystemPath (CFURLRef aURL, CFURLPathStyle style)
+CFURLCopyFileSystemPath (CFURLRef url, CFURLPathStyle style)
 {
+  if (CFURLHasInfo(url, kCFURLComponentPath))
+    return NULL;
   return NULL;
 }
 
 CFStringRef
 CFURLCopyFragment (CFURLRef url, CFStringRef charactersToLeaveEscaped)
 {
+  if (CFURLHasInfo(url, kCFURLComponentFragment))
+    return NULL;
   return NULL;
 }
 
 CFStringRef
 CFURLCopyHostName (CFURLRef url)
 {
+  if (CFURLHasInfo(url, kCFURLComponentHost))
+    return NULL;
   return NULL;
 }
 
 CFStringRef
 CFURLCopyLastPathComponent (CFURLRef url)
 {
+  if (CFURLHasInfo(url, kCFURLComponentPath))
+    return NULL;
   return NULL;
 }
 
 CFStringRef
 CFURLCopyNetLocation (CFURLRef url)
 {
+  if (CFURLHasInfo(url, kCFURLComponentNetLocation))
+    return NULL;
   return NULL;
 }
 
 CFStringRef
 CFURLCopyParameterString (CFURLRef url, CFStringRef charactersToLeaveEscaped)
 {
+  if (CFURLHasInfo(url, kCFURLComponentParameterString))
+    return NULL;
   return NULL;
 }
 
 CFStringRef
 CFURLCopyPassword (CFURLRef url)
 {
+  if (CFURLHasInfo(url, kCFURLComponentPassword))
+    return NULL;
   return NULL;
 }
 
 CFStringRef
 CFURLCopyPath (CFURLRef url)
 {
+  if (CFURLHasInfo(url, kCFURLComponentPath))
+    return NULL;
   return NULL;
 }
 
 CFStringRef
 CFURLCopyPathExtension (CFURLRef url)
 {
+  if (CFURLHasInfo(url, kCFURLComponentPath))
+    return NULL;
   return NULL;
 }
 
 CFStringRef
 CFURLCopyQueryString (CFURLRef url, CFStringRef charactersToLeaveEscaped)
 {
+  if (CFURLHasInfo(url, kCFURLComponentQuery))
+    return NULL;
   return NULL;
 }
 
 CFStringRef
 CFURLCopyResourceSpecifier (CFURLRef url)
 {
+  if (CFURLHasInfo(url, kCFURLComponentResourceSpecifier))
+    return NULL;
   return NULL;
 }
 
 CFStringRef
 CFURLCopyScheme (CFURLRef url)
 {
+  if (CFURLHasInfo(url, kCFURLComponentScheme))
+    return NULL;
   return NULL;
 }
 
 CFStringRef
 CFURLCopyStrictPath (CFURLRef url, Boolean *isAbsolute)
 {
+  if (CFURLHasInfo(url, kCFURLComponentPath))
+    return NULL;
   return NULL;
 }
 
 CFStringRef
 CFURLCopyUserName (CFURLRef url)
 {
+  if (CFURLHasInfo(url, kCFURLComponentUser))
+    return NULL;
   return NULL;
 }
 
 SInt32
 CFURLGetPortNumber (CFURLRef url)
 {
+  if (CFURLHasInfo(url, kCFURLComponentPort))
+    return 0;
   return 0;
 }
 
 Boolean
 CFURLHasDirectoryPath (CFURLRef url)
 {
-  return false;
+  CFStringRef str;
+  CFIndex len;
+  
+  str = CFURLGetString (url);
+  len = CFStringGetLength (str);
+  
+  return (CHAR_SLASH == CFStringGetCharacterAtIndex (str, len - 1));
 }
 
 CFDataRef
 CFURLCreateData (CFAllocatorRef alloc, CFURLRef url, CFStringEncoding encoding,
   Boolean escapeWhiteSpace)
 {
-  return NULL;
+  CFDataRef ret;
+  CFURLRef abs;
+  CFStringRef absStr;
+  
+  abs = CFURLCopyAbsoluteURL (url);
+  absStr = CFURLGetString (abs);
+  if (escapeWhiteSpace)
+    absStr = CFURLCreateStringByAddingPercentEscapes (alloc, absStr, NULL,
+      CFSTR(" \r\n\t"), encoding);
+  ret = CFStringCreateExternalRepresentation (alloc, absStr, encoding, 0);
+  
+  if (escapeWhiteSpace)
+    CFRelease (absStr);
+  CFRelease (abs);
+  
+  return ret;
 }
-
-#define URL_IS_RESERVED(c) (URL_IS_GEN_DELIMS(c) || URL_IS_SUB_DELIMS(c))
-#define URL_IS_UNRESERVED(c) (CHAR_IS_ALPHA(c) || CHAR_IS_DIGIT(c) \
-  || c == CHAR_MINUS || c == CHAR_PERIOD || c == CHAR_LOW_LINE \
-  || c == CHAR_TILDE)
-
-#define URL_IS_GEN_DELIMS(c) (c == CHAR_COLON || c == CHAR_SLASH \
-  || c == CHAR_QUESTION || c == CHAR_NUMBER || c == CHAR_L_SQUARE_BRACKET \
-  || c == CHAR_R_SQUARE_BRACKET || c == CHAR_AT)
-#define URL_IS_SUB_DELIMS(c) (c == CHAR_EXCLAMATION || c == CHAR_DOLLAR \
-  || c == CHAR_AMPERSAND || c == CHAR_APOSTROPHE || c == CHAR_L_PARANTHESIS \
-  || c == CHAR_ASTERISK || c == CHAR_PLUS || c == CHAR_COMMA \
-  || c == CHAR_SEMICOLON || c == CHAR_EQUAL)
 
 static Boolean
 CFURLAppendPercentEscapedForCharacter (char **dst, UniChar c,
