@@ -1,0 +1,20 @@
+#include "CoreFoundation/CFURL.h"
+
+#include "../CFTesting.h"
+
+int main (void)
+{
+  CFURLRef url;
+  CFURLRef url2;
+  
+  url = CFURLCreateWithString (NULL, CFSTR("http://www.gnustep.org"), NULL);
+  PASS(url != NULL, "URL created.");
+  
+  url2 = CFURLCopyAbsoluteURL (url);
+  PASS(url == url2, "Absolute URL of an absolute URL are the same.");
+  
+  CFRelease (url);
+  CFRelease (url2);
+  
+  return 0;
+}
