@@ -1,3 +1,10 @@
+2012-01-17 Stefan Bidigaray <stefanbidi@gmail.com>
+
+	* Source/GSPrivate.h: Added function to guess file system encoding.
+	* Source/CFURL.c: Added some more create functions.
+	* Source/CFRuntime.c: Initialize CFURL class.
+	* Tests/CFURL/create.m: Some simple create tests.
+
 2012-01-15 Stefan Bidigaray <stefanbidi@gmail.com>
 
 	* Source/GSPrivate.h:
